--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -20,7 +19,8 @@
             android:id="@+id/tvDisp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/display_green"
+            android:background="@color/material_dynamic_primary90"
+            android:textColor="@color/material_dynamic_primary30"
             android:gravity="end|bottom"
             android:paddingEnd="10sp"
             android:paddingBottom="10sp"
@@ -36,9 +36,9 @@
         android:weightSum="4"
         android:layout_weight="3"
         android:orientation="vertical"
-        android:background="#373636">
-<!--        android:backgroundTint="@color/black"-->
-<!--        android:backgroundTintMode=""-->
+        android:background="@color/material_dynamic_secondary10">
+        <!--        android:backgroundTint="@color/black"-->
+        <!--        android:backgroundTintMode=""-->
 
 
         <LinearLayout
@@ -50,6 +50,8 @@
                 android:id="@+id/btnCE"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_secondary60"
+
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="CE"
@@ -60,6 +62,8 @@
                 android:id="@+id/btnMul"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_secondary60"
+
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="×"
@@ -70,6 +74,8 @@
                 android:id="@+id/btnDiv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_secondary60"
+
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="÷"
@@ -80,6 +86,7 @@
                 android:id="@+id/btnBS"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_primary40"
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="⌫"
@@ -101,38 +108,42 @@
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="7"
+                android:backgroundTint="@color/material_dynamic_secondary30"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn8"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_secondary30"
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="8"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn9"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_secondary30"
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="9"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnMin"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_primary40"
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="-"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -147,40 +158,44 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="5sp"
+                android:backgroundTint="@color/material_dynamic_secondary30"
                 android:layout_weight="1"
                 android:text="4"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn5"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_secondary30"
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="5"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn6"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/material_dynamic_secondary30"
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="6"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnPls"
                 android:layout_width="wrap_content"
+                android:backgroundTint="@color/material_dynamic_primary40"
                 android:layout_height="match_parent"
                 android:layout_margin="5sp"
                 android:layout_weight="1"
                 android:text="+"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -190,95 +205,102 @@
             android:orientation="horizontal"
             android:weightSum="4"
             android:layout_weight="2">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:weightSum="2">
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
+                    android:layout_height="0dp"
+                    android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:weightSum="2">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:orientation="horizontal"
-                        android:layout_weight="1"
-                        android:weightSum="3">
-
-                        <Button
-                            android:id="@+id/btn1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5sp"
-                            android:text="1"
-                            android:textSize="40sp"
-                            android:textStyle="bold"
-                            android:layout_weight="1"/>
-
-                        <Button
-                            android:id="@+id/btn2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5sp"
-                            android:text="2"
-                            android:textSize="40sp"
-                            android:textStyle="bold"
-                            android:layout_weight="1"/>
-
-                        <Button
-                            android:id="@+id/btn3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5sp"
-                            android:text="3"
-                            android:textSize="40sp"
-                            android:textStyle="bold"
-                            android:layout_weight="1"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:orientation="horizontal"
-                        android:layout_weight="1"
-                        android:weightSum="3">
-
-                        <Button
-                            android:id="@+id/btn0"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5sp"
-                            android:textStyle="bold"
-                            android:textSize="40sp"
-                            android:text="0"
-                            android:layout_weight="1"/>
-
-                        <Button
-                            android:id="@+id/btnDot"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5sp"
-                            android:textStyle="bold"
-                            android:textSize="40sp"
-                            android:text="."
-                            android:layout_weight="2"/>
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:orientation="vertical">
+                    android:weightSum="3">
 
                     <Button
-                        android:id="@+id/btnEql"
+                        android:id="@+id/btn1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/material_dynamic_secondary30"
+                        android:layout_margin="5sp"
+                        android:text="1"
+                        android:textSize="40sp"
+                        android:textStyle="bold"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btn2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5sp"
+                        android:backgroundTint="@color/material_dynamic_secondary30"
+                        android:text="2"
+                        android:textSize="40sp"
+                        android:textStyle="bold"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btn3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5sp"
+                        android:backgroundTint="@color/material_dynamic_secondary30"
+                        android:text="3"
+                        android:textSize="40sp"
+                        android:textStyle="bold"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    android:weightSum="3">
+
+                    <Button
+                        android:id="@+id/btn0"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="="
-                        android:textSize="48sp"
-                        android:layout_margin="5sp"/>
+                        android:layout_margin="5sp"
+                        android:backgroundTint="@color/material_dynamic_secondary30"
+                        android:textStyle="bold"
+                        android:textSize="40sp"
+                        android:text="0"
+                        android:layout_weight="1" />
 
+                    <Button
+                        android:id="@+id/btnDot"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5sp"
+                        android:backgroundTint="@color/material_dynamic_secondary30"
+                        android:textStyle="bold"
+                        android:textSize="40sp"
+                        android:text="."
+                        android:layout_weight="2" />
                 </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btnEql"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/material_dynamic_primary40"
+                    android:text="="
+                    android:textSize="48sp"
+                    android:layout_margin="5sp" />
+
+            </LinearLayout>
 
 
         </LinearLayout>
